Mellan div start

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <a href="#">Länk 3</a>
       <h1 id="rubrik">Rubrik 1</h1>
     </div>
-    
+    <div id="mellan">
+      <div id="mellan_v"><h1 id="rubrikv">Rubrik vänster</h1></div>
+      <div id="mellan_h"><h1 id="rubrikh">Rubrik höger</h1></div>
+    </div>
   </body>
 </html>
