--- a/index.html
+++ b/index.html
@@ -13,9 +13,32 @@
       <a href="#">Länk 3</a>
       <h1 id="rubrik">Rubrik 1</h1>
     </div>
+
     <div id="mellan">
       <div id="mellan_v"><h1 id="rubrikv">Rubrik vänster</h1></div>
       <div id="mellan_h"><h1 id="rubrikh">Rubrik höger</h1></div>
+    </div>
+
+    <div id="botten">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+        fugit sit voluptas suscipit officiis atque corrupti, quaerat quidem
+        deserunt, dolorem, consectetur quae saepe at! Cupiditate voluptates
+        laudantium odit eius perferendis. Ipsum velit animi, minus corrupti ab
+        molestias, porro asperiores facere cupiditate corporis veniam quisquam
+        eos laudantium autem? Dicta dolores amet beatae, illum iusto veritatis
+        minima facilis repudiandae quisquam aut alias? Ipsam, quidem repellat
+        fuga sequi ea odit incidunt eveniet deleniti culpa obcaecati iste maxime
+        itaque recusandae illum, rem temporibus cum nemo sapiente deserunt!
+        Placeat nemo iusto odit iure nesciunt omnis. Nemo provident velit
+        dolorem. Veritatis harum quis magni iste similique officia dolorem
+        consequatur blanditiis repudiandae soluta minima, odio laudantium
+        temporibus obcaecati voluptates aperiam et saepe suscipit repellendus
+        culpa nam iusto. Error in consequatur dolor quis, enim eaque obcaecati
+        ad corrupti consectetur? Nesciunt maxime odit inventore rem molestias
+        nihil incidunt distinctio beatae vel consequuntur? Quibusdam, numquam
+        laudantium? Laudantium dolor natus minima!
+      </p>
     </div>
   </body>
 </html>
